syntax = "proto3";

package pb;

import "accompany.proto";

option go_package = "Backend/pb";

message createAccompanyRequest {
    int32 UserID = 1;
    int32 Era = 2;
    string City = 3;
    string Gender = 4;
    string Speaklanguage = 5;
    string FindType = 6;
    string FindTarget = 7;
    string Sociability = 8;
    bool Certification = 9;
}
message createAccompanyResponse {
    accompany ac = 1;
}

message getAccompanyRequest {
    int32 UserID = 1;
}
message getAccompanyResponse {
    accompany ac = 1;
}

message updateAccompanyRequest {
    int32 UserID = 1;
    int32 Era = 2;
    string City = 3;
    string Gender = 4;
    string Speaklanguage = 5;
    string FindType = 6;
    string FindTarget = 7;
    string Sociability = 8;
    bool Certification = 9;
}
message updateAccompanyResponse {
    accompany ac = 1;
}